fix(wire): btn-links without href not showing as pointer

--- a/processwire/site/templates/styles/main.css
+++ b/processwire/site/templates/styles/main.css
@@ -219,6 +219,7 @@ svg {
 	background-color: transparent;
 	border: none;
 	color: var(--secondary);
+	cursor: pointer;
 	padding: 0 var(--p-sm);
 }
 
